Clean code in Test classes
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>