@@ -7,7 +7,6 @@
  */
 package com.powsybl.metrix.integration;
 
-import com.google.common.collect.ImmutableList;
 import com.powsybl.contingency.BranchContingency;
 import com.powsybl.contingency.BusbarSectionContingency;
 import com.powsybl.contingency.ContingenciesProvider;
@@ -25,6 +24,8 @@ import java.io.IOException;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 import java.util.ResourceBundle;
 
 import static com.powsybl.metrix.mapping.LogDslLoader.LogType.WARNING;
@@ -41,7 +42,7 @@ class MetrixContingencyAnalysisTest {
 
     @BeforeEach
     void setUp() {
-        network = NetworkSerDe.read(getClass().getResourceAsStream("/simpleNetwork.xml"));
+        network = NetworkSerDe.read(Objects.requireNonNull(getClass().getResourceAsStream("/simpleNetwork.xml")));
     }
 
     private String getWarningInvalidContingency(String contingency, String equipment) {
@@ -79,7 +80,7 @@ class MetrixContingencyAnalysisTest {
     }
 
     private void loadContingencyTest(Contingency contingency, String expected) throws IOException {
-        ContingenciesProvider provider = network -> ImmutableList.of(contingency);
+        ContingenciesProvider provider = n -> List.of(contingency);
 
         StringWriter writer = new StringWriter();
         try (BufferedWriter bufferedWriter = new BufferedWriter(writer)) {
@@ -134,7 +135,7 @@ class MetrixContingencyAnalysisTest {
     @Test
     void metrixDslDataLoadContingencyAnalysisTest() throws IOException {
         MetrixDslData metrixDslData = new MetrixDslData();
-        metrixDslData.addCurativeLoad("loadId", 10, ImmutableList.of("ctyForLoadId"));
+        metrixDslData.addCurativeLoad("loadId", 10, List.of("ctyForLoadId"));
         String expected = getWarningInvalidMetrixDslDataContingency(" - loadId", "load", "ctyForLoadId");
         metrixDslDataContingencyAnalysisTest(metrixDslData, expected);
     }
@@ -142,7 +143,7 @@ class MetrixContingencyAnalysisTest {
     @Test
     void metrixDslDataPhaseTapChangerContingencyAnalysisTest() throws IOException {
         MetrixDslData metrixDslData = new MetrixDslData();
-        metrixDslData.addPtc("phaseTapChangerId", MetrixPtcControlType.OPTIMIZED_ANGLE_CONTROL, ImmutableList.of("ctyForPhaseTapChangerId"));
+        metrixDslData.addPtc("phaseTapChangerId", MetrixPtcControlType.OPTIMIZED_ANGLE_CONTROL, List.of("ctyForPhaseTapChangerId"));
         String expected = getWarningInvalidMetrixDslDataContingency(" - phaseTapChangerId", "phaseTapChanger", "ctyForPhaseTapChangerId");
         metrixDslDataContingencyAnalysisTest(metrixDslData, expected);
     }
@@ -150,7 +151,7 @@ class MetrixContingencyAnalysisTest {
     @Test
     void metrixDslDataGeneratorContingencyAnalysisTest() throws IOException {
         MetrixDslData metrixDslData = new MetrixDslData();
-        metrixDslData.addGeneratorForRedispatching("generatorId", ImmutableList.of("ctyForGeneratorId"));
+        metrixDslData.addGeneratorForRedispatching("generatorId", List.of("ctyForGeneratorId"));
         String expected = getWarningInvalidMetrixDslDataContingency(" - generatorId", "generator", "ctyForGeneratorId");
         metrixDslDataContingencyAnalysisTest(metrixDslData, expected);
     }
@@ -158,7 +159,7 @@ class MetrixContingencyAnalysisTest {
     @Test
     void metrixDslDataHvdcLineContingencyAnalysisTest() throws IOException {
         MetrixDslData metrixDslData = new MetrixDslData();
-        metrixDslData.addHvdc("hvdcLineId", MetrixHvdcControlType.OPTIMIZED, ImmutableList.of("ctyForHvdcLineId"));
+        metrixDslData.addHvdc("hvdcLineId", MetrixHvdcControlType.OPTIMIZED, List.of("ctyForHvdcLineId"));
         String expected = getWarningInvalidMetrixDslDataContingency(" - hvdcLineId", "hvdcLine", "ctyForHvdcLineId");
         metrixDslDataContingencyAnalysisTest(metrixDslData, expected);
     }
